# OBS-Detect-Vision-Sports-Edition

./: CMakeLists.txt  README.md
cmake/: FetchOnnxruntime.cmake
data/locale/: en-US.ini
src/: FilterData.h  consts.h  detect-filter.cpp
